--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "firebase": "^5.5.7",
     "global": "^4.3.2",
+    "history": "^4.7.2",
     "moment": "^2.22.2",
     "node-sass": "^4.9.4",
     "normalize.css": "^8.0.0",
